# MilkyPublisher

./: build.gradle.kts  settings.gradle.kts
ROS2Connection/: build.gradle.kts
ROS2Connection/src/androidTest/java/com/takuchan/ros2connection/: ExampleInstrumentedTest.kt
ROS2Connection/src/main/cpp/: CMakeLists.txt  publisher.cpp  publisher.h
ROS2Connection/src/test/java/com/takuchan/ros2connection/: ExampleUnitTest.kt
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/com/takuchan/milkypublisher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/takuchan/milkypublisher/: MainActivity.kt  MilkyPublisherApplication.kt  MyApplication.kt
app/src/main/java/com/takuchan/milkypublisher/analysis/: CaptureImageAnalyzer.kt  FaceCaptureImageAnalyzer.kt  PoseCaptureImageAnalyzer.kt
app/src/main/java/com/takuchan/milkypublisher/background/: BluetoothConfig.kt  Context.kt  LifeCycleCompose.kt
app/src/main/java/com/takuchan/milkypublisher/components/: CameraPreview.kt
app/src/main/java/com/takuchan/milkypublisher/compose/: AlertDialogInstance.kt  BluetoothSetteingScreen.kt  ConnectingScreen.kt  HomeScreen.kt  LogScreen.kt  MainScreen.kt  OthersPublisherScreen.kt  (+2 more)
app/src/main/res/drawable/: ros2_tm_color.xml
app/src/main/res/layout/: camera_preview_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/takuchan/milkypublisher/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
home_accident/: CMakeLists.txt  package.xml
home_accident/src/: home_accident.py
ros2_publisher/: build.gradle.kts
ros2_publisher/src/androidTest/java/com/takuchan/ros2_publisher/: ExampleInstrumentedTest.kt
ros2_publisher/src/main/: AndroidManifest.xml
ros2_publisher/src/main/java/com/takuchan/ros2_publisher/: ROS2PublisherActivity.kt
ros2_publisher/src/main/res/values/: strings.xml
ros2_publisher/src/test/java/com/takuchan/ros2_publisher/: ExampleUnitTest.kt
test_python/: pose_detect_test.csv  pose_detect_test3.csv  pose_detect_test4.csv  pose_detect_test5.csv  posedetect1.csv  udp_posedetect_test.py
(+81 files in other folders)
